--- a/package.json
+++ b/package.json
@@ -4,16 +4,30 @@
   "description": "vue component drag resize",
   "main": "dist/index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "build": "rm -rf dist && npx webpack --config webpack.config.js"
+    "test": "cross-env BABEL_ENV=test karma start --single-run",
+    "build": "rm -rf dist &&cross-env NODE_ENV=production npx webpack --config webpack.config.js"
   },
   "author": "zhuwei",
   "license": "MIT",
   "devDependencies": {
     "@babel/core": "^7.0.0",
     "@babel/preset-env": "^7.0.0",
+    "@vue/test-utils": "^1.0.0-beta.25",
     "babel-loader": "^8.0.0",
+    "babel-plugin-istanbul": "^4.1.5",
+    "chai": "^4.1.2",
+    "cross-env": "^5.1.3",
     "css-loader": "^1.0.0",
+    "karma": "^3.0.0",
+    "karma-chai": "^0.1.0",
+    "karma-chrome-launcher": "^2.2.0",
+    "karma-mocha": "^1.3.0",
+    "karma-sourcemap-loader": "^0.3.7",
+    "karma-spec-reporter": "0.0.32",
+    "karma-webpack": "^3.0.4",
+    "karma-coverage": "^1.1.1",
+    "mocha": "^5.2.0",
+    "vue": "^2.5.17",
     "vue-loader": "^15.4.1",
     "vue-style-loader": "^4.1.2",
     "vue-template-compiler": "^2.5.17",
