--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "vue component drag resize",
   "main": "dist/index.js",
   "scripts": {
-    "test": "cross-env BABEL_ENV=test karma start --single-run",
+    "test": "cross-env BABEL_ENV=test karma start --single-run=false",
     "build": "rm -rf dist &&cross-env NODE_ENV=production npx webpack --config webpack.config.js"
   },
   "author": "zhuwei",
@@ -20,12 +20,13 @@
     "css-loader": "^1.0.0",
     "karma": "^3.0.0",
     "karma-chai": "^0.1.0",
+    "karma-chai-dom": "^1.1.0",
     "karma-chrome-launcher": "^2.2.0",
+    "karma-coverage": "^1.1.1",
     "karma-mocha": "^1.3.0",
     "karma-sourcemap-loader": "^0.3.7",
     "karma-spec-reporter": "0.0.32",
     "karma-webpack": "^3.0.4",
-    "karma-coverage": "^1.1.1",
     "mocha": "^5.2.0",
     "vue": "^2.5.17",
     "vue-loader": "^15.4.1",
