--- a/package.json
+++ b/package.json
@@ -24,10 +24,13 @@
     "karma-chrome-launcher": "^2.2.0",
     "karma-coverage": "^1.1.1",
     "karma-mocha": "^1.3.0",
+    "karma-sinon-chai": "^2.0.2",
     "karma-sourcemap-loader": "^0.3.7",
     "karma-spec-reporter": "0.0.32",
     "karma-webpack": "^3.0.4",
     "mocha": "^5.2.0",
+    "sinon": "^6.3.4",
+    "sinon-chai": "^3.2.0",
     "vue": "^2.5.17",
     "vue-loader": "^15.4.1",
     "vue-style-loader": "^4.1.2",
