--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "mocha": "^5.2.0",
     "sinon": "^6.3.4",
     "sinon-chai": "^3.2.0",
+    "syn": "^0.5.0",
     "vue": "^2.5.17",
     "vue-loader": "^15.4.1",
     "vue-style-loader": "^4.1.2",
